--- a/index.html
+++ b/index.html
@@ -1,11 +1,39 @@
 <html> 
+	<head> 
 
+	<!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <script src="script/jquery.simpleWeather.js"></script> 
+	</head> 
+	<body> 
+		<p> Your current weather is: </p> 
+		<div id="your-weather"></div> 
+	</body>
 
-<body> 
-	<p> hello world </p> 
-</body> 
+	<script> 
+		$(document).ready(function() {
+		  loadWeather('Providence',''); //@params location, woeid
+		});
 
-
+		function loadWeather(location, woeid) {
+		  $.simpleWeather({
+		    location: location,
+		    woeid: woeid,
+		    unit: 'f',
+		    success: function(weather) {
+		      html = '<h2><i class="icon-'+weather.code+'"></i> '+weather.temp+'&deg;'+weather.units.temp+'</h2>';
+		      html += '<ul><li>'+weather.city+', '+weather.region+'</li>';
+		      html += '<li class="currently">'+weather.currently+'</li>';
+		      html += '<li>'+weather.alt.temp+'&deg;C</li></ul>';  
+		      
+		      $("#your-weather").html(html);
+		    },
+		    error: function(error) {
+		      $("#weather").html('<p>'+error+'</p>');
+		    }
+		  });
+		}
+	</script>  
 
 
 </html> 
